Fix wrong collection package failing Java 11 builds.